# ddi13-warmups

./: clean_temps.py  main.py  pyproject.toml  unique_word_count.py
src/: avg_categories_hist-22Oct25.ipynb  avg_categories_hist-22Oct25.py  avg_ratings-23Oct25.ipynb  avg_ratings-23Oct25.py  avg_survival-21Oct25.ipynb  avg_survival-21Oct25.py  boat_engines-29Oct25.ipynb  cars-linreg-18Nov25.py  cars-linreg_practice-21Nov25.ipynb  cars-mpg-acceleration-13Nov25.py  cars_plot-27Oct25.ipynb  clean-mpg-19Nov25.py  dice_counts-12Nov25.py  fizzbuzz-08Oct25.py  num_type_dupes-20Oct25.ipynb  num_type_dupes-20Oct25.py  pd_warmup-17Oct25.py  random-dice-07Nov25.py  reverse_sentence-16Oct25.py  second_largest-15Oct25.py  sum_of_list-30Oct25.py  tmp.py
src/data/: titanic_survival.csv
src/imports-03Nov25/: hello.py  hello_two.py  say_hello.py
