[project]
name = "ddi13-warmups"
version = "0.1.0"
description = "Warmup exercises for ddi13"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finnhub-python>=2.4.25",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E", "N", "B", "R", "I", "ANN", "PL", "UP", "D", "TRY", "FURB", "F", "W"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 71
preview = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 71

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.uv.workspace]
members = [
    "warmups",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "types-networkx>=3.5.0.20250712",
    "pandas-stubs>=2.3.0.250703",
    "ipykernel>=6.30.1",
    ]
